* Added parameter exahustiveAutocorrs to allow correlation of cross-hand autocorrelations when polarisations are in different datastreams
* Support units in the clock rate (e.g., usec/sec).  This change generalizes unit support to allow time in numerators.
* Increase maximum number of allowed IFs from 4 to 32, and catch cases where this gets exceeded.

Version 2.5.0
~~~~~~~~~~~~~
* Users can now supply comments in one or more COMMENT { } blocks
* In the ANTENNA { } blocks, one can specify  machine =  to force a datastream
  process to be run on a particular machine for a particular antenna.
  * NOTE: the global "machines" parameter must be set, from which missing
    antenna machine assignments and the usual head / core processor
    assignments will be drawn.
* outPath global parameter added: all .difx/ output gets put here rather than ./
* Split vex2difx.cpp into smaller pieces (in progress)
* If baseband data files are provided via file lists and some jobs have
  missing data, exlude antennas as necessary and write a "nodata" file
* Allow phase cal interval of 200 MHz (KVN) without warning since extraction works
* Fix guardNS calculation (finally!)...
  - Needed to consider bits per sample and number of baseband channels
  - Swiftly moving sources and/or antennas could still trigger this problem
* leap second file now optional for spice kernel evaluation.
  - If not provided, the EOPs from within the DifxInput structure will be used
* Major restructuring of code to facilitate multiple datastream support
  - vex2 support is being anticipated
  - Break out each vex table structure into its own .h/.cpp file pair
  - Vex tables remain const except through access from VexData structure
  - Load vex file without reference to the CorrParams structure (.v2d file)
  - Data (files, modules, network info) are tied to a VexAntenna structure
  - Multiple data streams (VexStream objects) are referenced from setups